--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,7 +7,14 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
-
+<div id="header">
+  <% if logged_in? %>
+    Logged in as: <%= current_user.username %>
+  <% else %>
+    <%= link_to "Log In", new_session_url %>
+    <%= link_to "Sign Up", new_user_url %>
+  <% end %>
+</div>
 <%= yield %>
 
 </body>
