--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,8 +10,10 @@
 <div id="header">
   <% if logged_in? %>
     Logged in as: <%= current_user.username %>
+    <br>
+    <%= link_to "Log Out", logout_url %>
   <% else %>
-    <%= link_to "Log In", new_session_url %>
+    <%= link_to "Log In", new_session_url %>,
     <%= link_to "Sign Up", new_user_url %>
   <% end %>
 </div>
