--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,7 +13,7 @@
     <br>
     <%= link_to "Log Out", logout_url %>
   <% else %>
-    <%= link_to "Log In", new_session_url %>,
+    <%= link_to "Log In", new_session_url %> |
     <%= link_to "Sign Up", new_user_url %>
   <% end %>
 </div>
