--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,7 +16,9 @@
     <%= link_to "Log In", new_session_url %> |
     <%= link_to "Sign Up", new_user_url %>
   <% end %>
+  <h1>DerpTask</h1>
 </div>
+
 <%= yield %>
 
 </body>
