--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -1,9 +1,17 @@
-<h1>DerpTask</h1>
 <div id="content">
 </div>
 
-<%= content_for :javascript do %>
-  <%= javascript_tag do %>
-    DropTask.initialize({ projects: <%== @projects.to_json %> });
-  <% end %>
-<% end -%>
+<div id="sidebar">
+</div>
+
+<script type="text/javascript" id="projects">
+$(function () {
+  DropTask.initialize(
+    $("#content"),
+    $("#sidebar"),
+    { projects: <%= @projects.to_json.html_safe %> }
+  )
+
+})
+
+</script>
