--- a/app/assets/templates/projects/show.jst.ejs
+++ b/app/assets/templates/projects/show.jst.ejs
@@ -1,5 +1,7 @@
 <div class="project">
-  <a class="project-name" href="#" title="<%= model.escape("name") %>">
+  <a class="project-name"
+    href="#/projects/<%= model.id %>"
+    title="<%= model.escape("name") %>">
     <%= model.escape("name") %>
   </a>
 </div>
