--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -11,3 +11,23 @@
  *= require_self
  *= require_tree .
  */
+
+#title {
+  padding-left: 50%;
+}
+
+#user-info {
+  float: left;
+  width: 200px;
+  height: 100%;
+}
+
+#menu {
+  position: absolute;
+  float: left;
+}
+
+#content {
+  padding-left: 200px;
+  float: left;
+}
