--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -1,14 +1,15 @@
+<div id="menu">
+</div>
+
 <div id="content">
 </div>
 
-<div id="sidebar">
-</div>
 
 <script type="text/javascript" id="projects">
 $(function () {
   DropTask.initialize(
     $("#content"),
-    $("#sidebar"),
+    $("#menu"),
     { projects: <%= @projects.to_json.html_safe %> }
   )
 
