--- a/app/assets/templates/projects/index.jst.ejs
+++ b/app/assets/templates/projects/index.jst.ejs
@@ -3,8 +3,9 @@
 
     <h3>All Tasks</h3>
     <div class="menu">
-      <a href="#">By Priority</a>
-      <a href="#">By Due Date</a>
+      <a href="#/all/priority">By Priority</a>
+      <!-- <br>
+      <a href="#/all/duedate">By Due Date</a> -->
     </div>
   </section>
   <section class="projects">
