--- a/app/assets/templates/groups/index.jst.ejs
+++ b/app/assets/templates/groups/index.jst.ejs
@@ -1,3 +1,36 @@
 <div class="groups-view">
-  <h2>Groups</h2>
+  <div id="groups-header" class="span 9">
+    <div class="btn-group navigation-buttons">
+      <a href='#/projects/<%= model.id %>/animated'>Circle</a>
+    </div>
+    <h3>
+      Groups
+      <a href="#newgroup" class="btn" data-toggle="modal">
+        <i class="icon-plus"></i>
+      </a>
+    </h3>
+  </div>
+</div>
+
+
+<div id="newgroup" class="modal hide fade" tabindex="-1"
+     role="form"  aria-labelledby="myModalLabel" aria-hidden="true">
+  <div class="modal-header">
+    <button type="button" class="close" data-dismiss="modal" aria-hidden="true">
+      x
+    </button>
+    <h3 id="new-group-form">New Group</h3>
+  </div>
+  <div class="modal-body">
+    <div id="#new-group">
+      <h4>New Group</h4>
+        Group Name: <input type="text" name="group[name]">
+    </div>
+  </div>
+  <div class="modal-footer">
+    <button class="btn" data-dismiss="modal" aria-hidden="true">Close</button>
+    <button id="submit-new-group" data-dismiss="modal" class="btn btn-primary">
+      Create
+    </button>
+  </div>
 </div>
