--- a/app/assets/templates/projects/index.jst.ejs
+++ b/app/assets/templates/projects/index.jst.ejs
@@ -1,4 +1,4 @@
-<div class="menu-content">
+<div class="menu-content pull-right">
   <section class="all">
 
     <h3>All Tasks</h3>
@@ -9,7 +9,34 @@
     </div>
   </section>
   <section class="projects">
-    <h3>All Projects</h3>
+    <h3>All Projects
+      <a href="#newproject" class="btn" data-toggle="modal">
+        <i class="icon-plus"></i>
+      </a>
+    </h3>
+
     <div class="projects content">
     </div>
+</div>
+
+<div id="newproject" class="modal hide fade" tabindex="-1"
+     role="form"  aria-labelledby="myModalLabel" aria-hidden="true">
+  <div class="modal-header">
+    <button type="button" class="close" data-dismiss="modal" aria-hidden="true">
+      x
+    </button>
+    <h3 id="new-project-form">New Project</h3>
+  </div>
+  <div class="modal-body">
+    <div id="#new-project">
+      <h4>New Project</h4>
+        Project Name: <input type="text" name="project[name]">
+    </div>
+  </div>
+  <div class="modal-footer">
+    <button class="btn" data-dismiss="modal" aria-hidden="true">Close</button>
+    <button id="submit-new-project" data-dismiss="modal" class="btn btn-primary">
+      Create
+    </button>
+  </div>
 </div>
