--- a/app/assets/templates/groups/index.jst.ejs
+++ b/app/assets/templates/groups/index.jst.ejs
@@ -1,7 +1,10 @@
 <div class="groups-view">
   <div id="groups-header" class="span 9">
     <div class="btn-group navigation-buttons">
-      <a href='#/projects/<%= model.id %>/animated'>Circle</a>
+      <a href='#/projects/<%= model.id %>/animated'
+        class="btn btn-small group animated">
+          Toggle View: <i class="icon-certificate"></i>
+      </a>
     </div>
     <h3>
       Groups
