--- a/app/assets/templates/tasks/show.jst.ejs
+++ b/app/assets/templates/tasks/show.jst.ejs
@@ -1,14 +1,15 @@
 <div class="task-show">
   <h3><%= model.escape("title") %></h3>
-
-  <h4>Priority:</h4>
-  <%= model.escape("priority") %>
-  <h4>Effort:</h4>
-  <%= model.escape("effort") %>
-  <h4>Description:</h4>
-  <%= model.escape("description") %>
-  <h4>Status:</h4>
-  <%= model.escape("status") %>
+  <div id="task-details">
+    <h4>Priority:</h4>
+    <%= model.escape("priority") %>
+    <h4>Effort:</h4>
+    <%= model.escape("effort") %>
+    <h4>Description:</h4>
+    <%= model.escape("description") %>
+    <h4>Status:</h4>
+    <%= model.escape("status") %>
+  </div>
   <br>
-  <button id="close-sidebar">Close</button>
+  <button id="close-sidebar" class="btn">Close</button>
 </div>
