--- a/app/assets/templates/groups/index.jst.ejs
+++ b/app/assets/templates/groups/index.jst.ejs
@@ -1,17 +1,18 @@
 <div class="groups-view">
-  <div id="groups-header" class="span 9">
+
+  <div id="groups-header">
     <div class="btn-group navigation-buttons">
       <a href='#/projects/<%= model.id %>/animated'
         class="btn btn-small group animated">
           Toggle View: <i class="icon-certificate"></i>
       </a>
     </div>
-    <h3>
+    <h2  class="span9 offset3">
       Groups
       <a href="#newgroup" class="btn" data-toggle="modal">
         <i class="icon-plus"></i>
       </a>
-    </h3>
+    </h2>
   </div>
 </div>
 
