--- a/app/assets/templates/groups/index.jst.ejs
+++ b/app/assets/templates/groups/index.jst.ejs
@@ -1,19 +1,22 @@
-<div class="groups-view">
-
-  <div id="groups-header">
-    <div class="btn-group navigation-buttons">
-      <a href='#/projects/<%= model.id %>/animated'
-        class="btn btn-small group animated">
-          Toggle View: <i class="icon-certificate"></i>
-      </a>
-    </div>
-    <h2  class="span9 offset3">
-      Groups
+<div id="groups-header">
+  <div class="btn-group navigation-buttons span2">
+    <a href='#/projects/<%= model.id %>/animated'
+      class="btn btn-small group animated">
+        Toggle View: <i class="icon-certificate"></i>
+    </a>
+  </div>
+  <div class="offset5 span2">
+      <strong>Groups</strong>
       <a href="#newgroup" class="btn" data-toggle="modal">
         <i class="icon-plus"></i>
       </a>
-    </h2>
   </div>
+</div>
+
+
+<div class="groups-view">
+
+
 </div>
 
 
