--- a/app/assets/templates/groups/index.jst.ejs
+++ b/app/assets/templates/groups/index.jst.ejs
@@ -5,20 +5,21 @@
         Toggle View: <i class="icon-certificate"></i>
     </a>
   </div>
-  <div class="offset5 span2">
-      <strong>Groups</strong>
+</div>
+
+<div class="groups-view">
+  <div class="offset2 span5">
+    <h2>
+      <%= model.escape("name") %>
       <a href="#newgroup" class="btn" data-toggle="modal">
         <i class="icon-plus"></i>
       </a>
+    </h2>
+  </div>
+  <div class="offset4 span3">
+
   </div>
 </div>
-
-
-<div class="groups-view">
-
-
-</div>
-
 
 <div id="newgroup" class="modal hide fade" tabindex="-1"
      role="form"  aria-labelledby="myModalLabel" aria-hidden="true">
