--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -1,20 +1,17 @@
 <div id="menu"></div>
 
-<div id="content"></div>
-
-<div id="sidebar"></div>
-
+<div id="content">
+  <div id="sidebar"></div>
+</div>
 
 <script type="text/javascript" id="projects">
 $(function () {
   DropTask.initialize(
     $("#content"),
     $("#menu"),
-    $("#sidebar"),
     {
       projects: <%= @projects.to_json.html_safe %>,
      }
   );
-})
-
+});
 </script>
