--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -101,6 +101,16 @@
   background-color: #3C9;
 }
 
+.task-pile {
+  height: 30px;
+  width: 30px;
+  -webkit-border-radius: 15px;
+  -moz-border-radius: 15px;
+  border-radius: 15px;
+  border: 1px solid;
+  background-color: #3F9;
+}
+
 .group-circle-helper {
   text-align: center;
   width: 500px;
@@ -110,5 +120,16 @@
   border-radius: 250px;
   border: 1px solid;
   z-index: 0;
+  background-color: #3C9;
+}
+
+.task-circle-helper {
+  width: 100px;
+  height: 100px;
+  -webkit-border-radius: 50px;
+  -moz-border-radius: 50px;
+  border-radius: 50px;
+  border: 1px solid;
+  z-index: 1;
   background-color: #3C9;
 }
