--- a/app/assets/templates/groups/animatedIndex.jst.ejs
+++ b/app/assets/templates/groups/animatedIndex.jst.ejs
@@ -1,15 +1,20 @@
 <div id="groups-header" class"row-fluid">
   <div class="span2">
-    <a href='#/projects/<%= collection.first().get("project_id") %>'
+    <a href='#/projects/<%= model.id %>'
        class="btn btn-small group animated pull-left">
          Toggle View: <i class="icon-list"></i>
     </a>
   </div>
-  <div class="offset5 span2">
+  <div class="pull-right">
     <div class="group-pile">
     </div>
   </div>
+  <div class="pull-right">
+    <div class="task-pile">
+    </div>
+  </div>
 </div>
+
 
 <div id="group-view-container">
   <div id="group-view-content">
@@ -20,7 +25,6 @@
            style="left: <%= group.escape('left') %>px;
                   top: <%= group.escape('top') %>px;">
         <h2><%= group.escape("name") %></h2>
-
 
         <% group.get("tasks").each(function (task) { %>
           <div class="task-circle"
@@ -63,4 +67,59 @@
       Create
     </button>
   </div>
+</div>
+
+<div id="newtask" class="modal hide fade" tabindex="-1"
+     role="form"  aria-labelledby="myModalLabel" aria-hidden="true">
+  <form id="new-task-form">
+    <div class="modal-header">
+      <button type="button" class="close" data-dismiss="modal" aria-hidden="true">
+        x
+      </button>
+      <h3>New Task</h3>
+    </div>
+    <div class="modal-body">
+      <div id="#new-task">
+        <h4>New Task</h4>
+          <label for="task-title">Title:</label>
+          <input type="text" name="task[title]" id="task-title">
+
+          <label for="task-priority">Priority:</label>
+          <select name="task[priority]">
+            <% var priorities = ["None", "High","Very High"] %>
+            <% priorities.forEach(function(priority) { %>
+              <option value="<%= priority %>"><%= priority %></option>
+            <% })%>
+
+          </select>
+
+          <label for="task-effort">Effort:</label>
+          <select name="task[effort]">
+            <% var efforts = ["Small", "Medium","Large"] %>
+            <% efforts.forEach(function(effort) { %>
+              <option value="<%= effort %>"><%= effort %></option>
+            <% })%>
+          </select>
+
+          <label for="task-status">Status:</label>
+          <select name="task[status]">
+            <% var statuses=["Not Started", "In Progress","On Hold", "Completed"] %>
+            <% statuses.forEach(function(status) { %>
+              <option value="<%= status %>"><%= status %></option>
+            <% })%>
+          </select>
+
+          <label for="task-description">Description</label>
+          <textarea name="task[description]" id="task-description"></textarea>
+
+      </div>
+    </div>
+    <div class="modal-footer">
+      <button class="btn" data-dismiss="modal" aria-hidden="true">Close</button>
+      <button id="submit-new-task" data-dismiss="modal" class="btn btn-primary">
+        Create
+      </button>
+
+    </div>
+  </form>
 </div>
