--- a/app/assets/templates/groups/show.jst.ejs
+++ b/app/assets/templates/groups/show.jst.ejs
@@ -14,7 +14,7 @@
       <button type="button" class="close" data-dismiss="modal" aria-hidden="true">
         x
       </button>
-      <h3 id="new-task-form">New Task</h3>
+      <h3>New Task</h3>
     </div>
     <div class="modal-body">
       <div id="#new-task">
