made task and group piles look a bit better

--- a/app/assets/templates/groups/animatedIndex.jst.ejs
+++ b/app/assets/templates/groups/animatedIndex.jst.ejs
@@ -1,18 +1,22 @@
 <div id="groups-header" class"row-fluid">
-  <div class="span2">
+  <div class="span4">
     <a href='#/projects/<%= model.id %>'
        class="btn btn-small group animated pull-left">
          Toggle View: <i class="icon-list"></i>
     </a>
   </div>
-  <div class="pull-right">
-    <div class="group-pile">
-    </div>
+
+  <div class="pull-right span3">
+    <div class="task-pile pull-right"></div>
+    <h4 class="span1.5 pull-right">New Task</h4>
   </div>
-  <div class="pull-right">
-    <div class="task-pile">
-    </div>
+
+  <div class="pull-right span2.5">
+    <div class="group-pile pull-right"></div>
+    <h4 class="span1.5 pull-right">New Group</h4>
   </div>
+
+
 </div>
 
 
