fixed small bug with task-pile

--- a/app/assets/templates/groups/animatedIndex.jst.ejs
+++ b/app/assets/templates/groups/animatedIndex.jst.ejs
@@ -7,16 +7,16 @@
   </div>
 
   <div class="pull-right span3">
-    <div class="task-pile pull-right"></div>
+    <div id="task-pile"
+      class="task-pile pull-right"></div>
     <h4 class="span1.5 pull-right">New Task</h4>
   </div>
 
   <div class="pull-right span2.5">
-    <div class="group-pile pull-right"></div>
+    <div id="task-pule"
+      class="group-pile pull-right"></div>
     <h4 class="span1.5 pull-right">New Group</h4>
   </div>
-
-
 </div>
 
 
