--- a/app/assets/templates/tasks/show.jst.ejs
+++ b/app/assets/templates/tasks/show.jst.ejs
@@ -1,5 +1,6 @@
 <div class="task-show">
-  <h3><%= model.escape("title") %></h3>
+  <a><h3 class="title"><%= model.escape("title") %></h3></a>
+
   <div id="task-details">
     <h4>Priority:</h4>
     <%= model.escape("priority") %>
