generalize task select box edits

--- a/app/assets/templates/tasks/show.jst.ejs
+++ b/app/assets/templates/tasks/show.jst.ejs
@@ -3,7 +3,7 @@
 
   <div id="task-details">
     <label for="priority"><strong>Priority:<strong></label>
-    <select name="task[priority]" id="priority">
+    <select class="edit-select" id="priority">
       <% var priorities = ["None", "High","Very High"] %>
       <% priorities.forEach(function(priority) { %>
         <option
