in line edit in task show sidebar

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -140,3 +140,15 @@
 #task-title {
 
 }
+
+.task-attr-container {
+  margin: 10px;
+}
+
+#task-show {
+  border: 2px solid;
+}
+
+#description-container {
+  height: 50px;
+}
