--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -1,9 +1,10 @@
-<div id="menu"></div>
+<div class="container-fluid">
+  <div id="menu" class="span3"></div>
 
-<div id="content">
-  <div id="sidebar"></div>
+  <div id="content">
+    <div id="sidebar"></div>
+  </div>
 </div>
-
 <script type="text/javascript" id="projects">
 $(function () {
   DropTask.initialize(
