--- a/app/assets/templates/tasks/priority.jst.ejs
+++ b/app/assets/templates/tasks/priority.jst.ejs
@@ -2,19 +2,42 @@
 
 <h3>Very High</h3>
 <% collection.where({ priority: "Very High" }).forEach(function (task) { %>
-  <div id="taskShow">
-    <a href="#" data-id="<%= task.id %>"><%= task.escape("title") %></a>
+  <div id="taskShow" class="task-all-detail">
+    <div class="task-title">
+      <a href="#" data-id="<%= task.id %>"><%= task.escape("title") %></a>
+    </div>
+    <div class="task-parents offset1">
+      <% var group = task.get("group") %>
+      <% var project = group.get("project")%>
+      <%= project.escape("name") %> > <%= group.escape("name") %>
+    </div>
   </div>
 <% }) %>
 <h3>High</h3>
 <% collection.where({ priority: "High" }).forEach(function (task) { %>
-  <div id="taskShow">
-    <a href="#" data-id="<%= task.id %>"><%= task.escape("title") %></a>
+  <div id="taskShow" class="task-all-detail">
+    <div class="task-title">
+      <a href="#" data-id="<%= task.id %>"><%= task.escape("title") %></a>
+    </div>
+    <div class="task-parents offset1">
+      <% var group = task.get("group") %>
+      <% var project = group.get("project")%>
+      <%= project.escape("name") %> > <%= group.escape("name") %>
+    </div>
   </div>
+
 <% }) %>
 <h3>None</h3>
 <% collection.where({ priority: "None" }).forEach(function (task) { %>
-  <div id="taskShow">
-    <a href="#" data-id="<%= task.id %>"><%= task.escape("title") %></a>
+  <div id="taskShow" class="task-all-detail">
+    <div class="task-title">
+      <a href="#" data-id="<%= task.id %>"><%= task.escape("title") %></a>
+    </div>
+    <div class="task-parents offset1">
+      <% var group = task.get("group") %>
+      <% var project = group.get("project")%>
+      <%= project.escape("name") %> > <%= group.escape("name") %>
+    </div>
   </div>
+
 <% }) %>
