--- a/app/assets/templates/projects/index.jst.ejs
+++ b/app/assets/templates/projects/index.jst.ejs
@@ -1,7 +1,7 @@
 <div class="menu-content">
   <section class="all">
 
-    <h3>All Tasks</h3>
+    <h3>Tasks</h3>
     <div class="menu">
       <a href="#/all/priority">By Priority</a>
       <!-- <br>
@@ -9,7 +9,7 @@
     </div>
   </section>
   <section class="projects">
-    <h3>All Projects
+    <h3>Projects
       <a href="#newproject" class="btn" data-toggle="modal">
         <i class="icon-plus"></i>
       </a>
