--- a/app/assets/templates/tasks/priority.jst.ejs
+++ b/app/assets/templates/tasks/priority.jst.ejs
@@ -3,10 +3,18 @@
 <h3>Very High</h3>
 <% collection.where({ priority: "Very High" }).forEach(function (task) { %>
   <div id="taskShow" class="task-all-detail">
-    <div class="task-title">
+    <div class="priority very-high"></div>
+    <div class="task-title span5">
+        <div class="task-status span1">
+        <% if (task.escape("status") === "In Progress") { %>
+          <i class="icon-play"></i>
+        <% } else if (task.escape("status") === "On Hold") { %>
+          <i class="icon-pause"></i>
+        <% } %>
+        </div>
       <a href="#" data-id="<%= task.id %>"><%= task.escape("title") %></a>
     </div>
-    <div class="task-parents offset1">
+    <div class="task-parents offset1 span5">
       <% var group = task.get("group") %>
       <% var project = group.get("project")%>
       <%= project.escape("name") %> > <%= group.escape("name") %>
@@ -16,10 +24,18 @@
 <h3>High</h3>
 <% collection.where({ priority: "High" }).forEach(function (task) { %>
   <div id="taskShow" class="task-all-detail">
-    <div class="task-title">
+    <div class="priority high"></div>
+    <div class="task-title span5">
+      <div class="task-status span1">
+      <% if (task.escape("status") === "In Progress") { %>
+        <i class="icon-play"></i>
+      <% } else if (task.escape("status") === "On Hold") { %>
+        <i class="icon-pause"></i>
+      <% } %>
+      </div>
       <a href="#" data-id="<%= task.id %>"><%= task.escape("title") %></a>
     </div>
-    <div class="task-parents offset1">
+    <div class="task-parents offset1 span5">
       <% var group = task.get("group") %>
       <% var project = group.get("project")%>
       <%= project.escape("name") %> > <%= group.escape("name") %>
@@ -30,10 +46,18 @@
 <h3>None</h3>
 <% collection.where({ priority: "None" }).forEach(function (task) { %>
   <div id="taskShow" class="task-all-detail">
-    <div class="task-title">
+    <div class="priority none"></div>
+    <div class="task-title span5">
+      <div class="task-status span1">
+      <% if (task.escape("status") === "In Progress") { %>
+        <i class="icon-play"></i>
+      <% } else if (task.escape("status") === "On Hold") { %>
+        <i class="icon-pause"></i>
+      <% } %>
+      </div>
       <a href="#" data-id="<%= task.id %>"><%= task.escape("title") %></a>
     </div>
-    <div class="task-parents offset1">
+    <div class="task-parents offset1 span5">
       <% var group = task.get("group") %>
       <% var project = group.get("project")%>
       <%= project.escape("name") %> > <%= group.escape("name") %>
