--- a/app/assets/templates/tasks/index.jst.ejs
+++ b/app/assets/templates/tasks/index.jst.ejs
@@ -2,10 +2,24 @@
   <div id="tasks-header">
   </div>
   <% collection.each(function(task) { %>
-    <div class="task">
-      <a id="taskShow" href="#" data-id="<%= task.id %>">
-        <%= task.escape("title") %>
-      </a>
+    <div id="taskShow" class="task-all-detail">
+      <div class="priority very-high"></div>
+      <div class="task-title span5">
+          <div class="task-status span1">
+          <% if (task.escape("status") === "In Progress") { %>
+            <i class="icon-play"></i>
+          <% } else if (task.escape("status") === "On Hold") { %>
+            <i class="icon-pause"></i>
+          <% } %>
+          </div>
+        <a href="#" data-id="<%= task.id %>"><%= task.escape("title") %></a>
+      </div>
+      <div class="task-parents offset1 span5">
+        <% var group = task.get("group") %>
+        <% var project = group.get("project")%>
+        <%= project.escape("name") %> > <%= group.escape("name") %>
+      </div>
     </div>
+
   <% })%>
 </div>
