--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -21,9 +21,14 @@
   min-height: 50px;
 }
 
+#content {
+  color: #506b7e;
+}
+
 #menu {
   position: absolute;
   height: 100%;
+  float: left;
   overflow: scroll;
   background-color: #F1F6F9;
   color: #506B90;
@@ -47,20 +52,21 @@
 }
 
 #groups-header {
+  width: 100%;
   height: 30px;
-  padding: 9px 5px;
+  padding: 5px;
   z-index: 1;
+  background-color: #F1F6F9;
 }
 
 #group-view-container {
-  position: absolute;
-  height: 80%;
-  width: 75%;
+  max-height: 600px;
   border: 1px solid;
   overflow: scroll;
 }
 
 #group-view-content {
+  position: relative;
   width: 1500px;
   height: 1500px;
 }
@@ -92,7 +98,7 @@
 }
 
 .modal > form {
-    margin-bottom: 0;
+  margin-bottom: 0;
 }
 
 .group-pile {
