--- a/app/assets/templates/projects/index.jst.ejs
+++ b/app/assets/templates/projects/index.jst.ejs
@@ -1,7 +1,6 @@
 <div class="menu-content">
   <section class="all">
-
-    <h3>Tasks</h3>
+    <h4>Tasks</h4>
     <div class="menu">
       <a href="#/all/priority">By Priority</a>
       <!-- <br>
@@ -9,11 +8,11 @@
     </div>
   </section>
   <section class="projects">
-    <h3>Projects
-      <a href="#newproject" class="btn" data-toggle="modal">
+    <h4>Projects
+      <a href="#newproject" class="btn btn-mini" data-toggle="modal">
         <i class="icon-plus"></i>
       </a>
-    </h3>
+    </h4>
 
     <div class="projects content">
     </div>
